# freebase-wikidata-converter

./: README.md
bot/: import-statements.php
convert/: composer.json  convert.php  explode-dump.py  filter.py  labels.php  lib.php  properties-statistical-mapping.php
data/: properties_expecting_cvt.csv
mapping/: freebase-wikidata-reconciliation-keys.php  samsung2pairs.py  wikidata2pairs.py
time-location-visualization/: CMakeLists.txt  README.md
time-location-visualization/cmake/: Findpng++.cmake
time-location-visualization/src/: Graph.h  PngCreator.cpp  PngCreator.h  PropagatedValue.cpp  PropagatedValue.h  freebase.cpp  wikidata.cpp
wikidata/: tsv-property-stat.php  wikidata-tsv-simple.php  wikidata-tsv.php
